--- a/assets/css/style.posts.css
+++ b/assets/css/style.posts.css
@@ -27,5 +27,29 @@ main{
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
+}
 
+label,
+input, textarea{
+    display: block;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    max-width: 500px;
+}
+textarea{
+    resize: none;
+}
+
+button{
+    background-color: #d30000;
+    color: #fff;
+    cursor: pointer;
+    width: 100%;
+    padding: 0.25rem;
+    border-radius: 8px;
+}
+
+button:hover{
+    background-color: #a00000;
 }
