feat: finished project

--- a/assets/css/style.posts.css
+++ b/assets/css/style.posts.css
@@ -6,11 +6,14 @@
 
 body{
     background-color: #f0f0f0;
+    background-image: url(../images/wallpaperazuno.png);
+    background-size: cover;
 }
 
 h1{
-    color: #d30000;
+    color: #250682;
     text-align: center;
+
 }
 
 main{
@@ -18,6 +21,8 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
+  
 }
 
 #postForm{
@@ -26,7 +31,7 @@ main{
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: #ccccccb2;
 }
 
 label,
@@ -42,7 +47,7 @@ textarea{
 }
 
 button{
-    background-color: #d30000;
+    background-color: #250682;
     color: #fff;
     cursor: pointer;
     width: 100%;
@@ -51,7 +56,8 @@ button{
 }
 
 button:hover{
-    background-color: #a00000;
+    background-color: #4711a5;
+    transition: 0.3s;
 }
 
 .itemPost{
@@ -62,12 +68,12 @@ button:hover{
 }
 
 .itemPost h2{
-    color: #a00000;
+    color: #250682;
     margin-bottom: 5px ;
 }
 
 .itemPost button{
-    background-color: #d30000;
+    background-color: #250682;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -83,11 +89,11 @@ button:hover{
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: #ccccccb2;
 }
 
 .itemPost button:hover{
-    background-color: #a00000;
+    background-color: #4711a5;
     transition: 0.3s;
 }
 
